docs(streaming): dedicated Streaming menu, ontul-style home, deeper content
- index.md: ontul-style landing — smaller centered logo (320px), a short "what is
  ItdaStream" tagline + description, and a Get Started button.
- mkdocs.yml nav: add Home; pull Streaming out as a top-level section (Overview,
  No-Code Kafka to Iceberg, Connection Registry, Streaming SDK, Operations & Tuning).
- New: streaming-no-code.md (full UI walkthrough) and streaming-operations.md
  (config reference, monitoring/status API, scaling & rebalance, exactly-once failure
  recovery, troubleshooting, capacity).
- streaming.md: refocused as the Overview, linking the dedicated pages.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>